# wol

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  wol.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
app/: main.cpp
cmake/: VerifyStatic.cmake
docs/: ARCHITECTURE.md  HANDOFF.md  RELEASE.md  TESTING.md
include/wol/: cli.hpp  config.hpp  help.hpp  learn.hpp  network.hpp  types.hpp
src/: cli.cpp  config.cpp  help.cpp  learn.cpp  network.cpp  toml.cpp  types.cpp
tests/: CliBehavior.cmake  wol_tests.cpp
